# zkballot

./: Cargo.toml  README.md  openapi.yaml
src/: ballot.rs  ecdsa.rs  main.rs  membership.rs  server.rs
src/gadget/: factors.rs  gadget_bound_check.rs  gadget_mimc.rs  gadget_not_equals.rs  gadget_osmt.rs  gadget_poseidon.rs  gadget_range_proof.rs  gadget_set_membership.rs  gadget_set_membership_1.rs  gadget_set_non_membership.rs  gadget_vsmt_2.rs  gadget_vsmt_4.rs  gadget_zero_nonzero.rs  mod.rs  scalar_utils.rs
system/bulletproofs/src/r1cs/: constraint_system.rs  linear_combination.rs  prover.rs  verifier.rs
