[package]
name = "zkballot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bulletproofs = { path = "system/bulletproofs", features = ["std", "avx2_backend", "yoloproofs"] }
curve25519-dalek = { package = "curve25519-dalek-ng", version = "4", default-features = false, features = ["u64_backend", "nightly", "serde", "alloc"] }
subtle = { version = "2", default-features = false }
sha3 = { version = "0.10.7", default-features = false }
digest = { version = "0.10.6", default-features = false }
rand_core = { version = "0.6.4", default-features = false, features = ["alloc"] }
rand = { version = "0.8.5", default-features = false, features = ["std"] }
byteorder = { version = "1", default-features = false }
serde = { version = "1", default-features = false, features = ["alloc"] }
serde_json = { version = "1" }
serde_derive = { version = "1", default-features = false }
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
thiserror = { version = "1", optional = true }
merlin = { version = "3.0.0", default-features = false }
primitive-types = { version = "0.12.1", default-features = false, features = ["serde"]}
k256 = { version = "0.11.4", features = ["ecdsa-core", "ecdsa", "keccak256"] }
sha2 = { version = "0.10.6", default-features = false, features = ["oid", "asm-aarch64", "asm"] }
anyhow = "1.0.71"
hex = "0.4.3"
actix-web = "4.0"
actix-rt = "2.2"
env_logger = "0.10.0"
clap = { version = "3", features = ["derive"] }
rand_chacha = "0.3.1"
[dev-dependencies]


[workspace]
members = ["./", "system/bulletproofs"]